# ubiquant-winograd

./: .gitignore  CMakeLists.txt  Makefile  README.md  clang-format-tools.py  driver.c  readme  regression.sh  small.conf  smallrealworld.conf  test.conf  winograd.c
include/: avxtools.h  common.h  timer.h
include/wgb2f3/: wgb2f3.h
include/wgb4f3/: wgb4f3.h
include/wgb4f3/avx512/: wgb4f3_avx512.h
src/wgb4f3/avx512/: wgb4f3_avx512.c  wgb4f3_avx512_kernels.c  wgb4f3_avx512_kernels.h
